--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
 
         // 1.1 PROFILE & BRANDING VARIABLES (REQUIRED)
         const profileData = {
-            studentName: "Riley Cardinal",
+            studentName: "Nylah Madden",
             tagline: "Future-Focused Problem Solver in Digital Media",
             currentYear: "Sophomore", // Freshman, Sophomore, Junior, Senior
             major: "Computer Science & Digital Media",
@@ -576,3 +576,4 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
