--- a/index.html
+++ b/index.html
@@ -256,10 +256,10 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
         // 1.1 PROFILE & BRANDING VARIABLES (REQUIRED)
         const profileData = {
             studentName: "Nylah Madden",
-            tagline: "Future-Focused Problem Solver in Digital Media",
-            currentYear: "Sophomore", // Freshman, Sophomore, Junior, Senior
-            major: "Computer Science & Digital Media",
-            gpa: 3.85,
+            tagline: "Future-Focused Problem Solver in Marketing",
+            currentYear: "Freshman", // Freshman, Sophomore, Junior, Senior
+            major: "Marketing",
+            gpa: 3.35,
             impactScoreMultiplier: 10, // Adjusts how much projects/awards count towards total impact
             
             // --- INTRODUCTION & BRANDING FIELDS ---
@@ -576,4 +576,5 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
