--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
             
             // --- INTRODUCTION & BRANDING FIELDS ---
             photoUrl: "https://placehold.co/150x150/BA0C2F/FFFFFF/png?text=NYLAH+M", // Replace with a URL to a professional headshot
-            logoUrl: "https://placehold.co/40x40/BA0C2F/FFFFFF.png?text=BSU", // URL for your school logo or personal brand icon
-            personalBio: "I am a sophomore driven by the intersection of computational thinking and creative design. My academic focus is on building scalable, user-centric web applications and leveraging data analysis to inform design decisions. I believe in continuous learning and applying classroom theory to immediate, impactful real-world challenges.",
-            missionStatement: "To build digital solutions that simplify complex processes and empower small businesses, leveraging Python, front-end frameworks, and a user-first design approach.",
+            logoUrl: "https://tse2.mm.bing.net/th/id/OIP.xtP_6Nzwt1jbIursWirbvgHaHa?rs=1&pid=ImgDetMain&o=7&rm=3", // URL for your school logo or personal brand icon
+            personalBio: "I am a freshman who is passionate about the fusion of storytelling, analytics, and digital strategy. My academic focus is on crafting compelling brand narratives and optimizing social media campaigns through data-driven insights. I thrive at the intersection of creativity and performance, constantly exploring how audience psychology and platform algorithms shape engagement. I believe in learning by doing—testing, iterating, and refining strategies to make real-world impact.",
+            missionStatement: "To design and execute social media marketing strategies that amplify brand voices, foster authentic connections, and drive measurable growth—leveraging content creation, audience analytics, and platform-specific best practices.",
         };
 
         /*
@@ -279,11 +279,11 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
 
         // 1.2 ACADEMICS (REQUIRED: Add relevant classes)
         const academicData = [
-            { name: "Intro to Python Programming", grade: "A", semester: "Fall 2024", relevance: "Code" },
-            { name: "Digital Design Principles", grade: "A-", semester: "Fall 2024", relevance: "Design" },
-            { name: "Calculus I", grade: "B+", semester: "Fall 2024", relevance: "Foundational" },
-            { name: "Web Development (Front-End)", grade: "A", semester: "Spring 2025", relevance: "Code" },
-            { name: "Data Structures", grade: "In Progress", semester: "Current", relevance: "Code" },
+            { name: "Rhetoric and Writing", grade: "B-", semester: "Fall 2025", relevance: "Core" },
+            { name: "Public Speaking", grade: "A-", semester: "Fall 2025", relevance: "Core" },
+            { name: "The West in the World", grade: "A", semester: "Fall 2025", relevance: "Core" },
+            { name: "Fundamentals of Human Health", grade: "A-", semester: "Fall 2025", relevance: "Core" },
+            { name: "Business Information Systems", grade: "B", semester: "Fall 2025", relevance: "Code" },
         ];
 
         // 1.3 PROJECTS (REQUIRED: Follow C-S-R format)
@@ -576,6 +576,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
 
 
