--- a/index.html
+++ b/index.html
@@ -289,19 +289,19 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
         // 1.3 PROJECTS (REQUIRED: Follow C-S-R format)
         const projectData = [
             {
-                title: "Local Charity Website Redesign",
-                category: "Design",
-                challenge: "The local Humane Society site was not mobile-friendly, resulting in high bounce rates on the donation page.",
-                solution: "Designed and implemented a responsive, user-centered interface using HTML, Tailwind CSS, and vanilla JS.",
-                result: "Increased mobile conversion rate by **15%** and reduced bounce rate by **22%** in the first month.",
+                title: "Feed My Starving Children Volunteer Event",
+                category: "Service",
+                challenge: "Local food insecurity and global hunger rates inspired me to take action through a hands-on service initiative.",
+                solution: "Assembled a volunteer packing event of 50 peers from my track team to assemble thousands of nutritious meals for international distribution.",
+                result: "Helped pack over 4,000 meals in one afternoon, contributing to sustainable aid efforts and strengthening community bonds.",
                 link: "https://github.com/riley/charity-site"
             },
             {
-                title: "Twitter Sentiment Analyzer (Academic)",
-                category: "Code",
-                challenge: "Required to analyze public sentiment towards a political topic using programming tools for a final project.",
-                solution: "Used Python (Pandas/Matplotlib) to clean data and built a basic Naive Bayes classification model.",
-                result: "Achieved **82%** accuracy in classifying positive/negative tweets, earning the highest grade in the class (A).",
+                title: "Long Jump State Qualifier",
+                category: "Athletics",
+                challenge: "After a season of inconsistent performance, I set a personal goal to qualify for regionals in long jump.",
+                solution: "Trained consistently with my coach, focused on technique refinement, and built mental resilience through visualization and journaling.",
+                result: "Qualified for regionals with a personal best, gaining confidence and proving that discipline and mindset shape outcomes.",
                 link: ""
             },
             {
@@ -576,6 +576,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
 
 
