--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
                 challenge: "Local food insecurity and global hunger rates inspired me to take action through a hands-on service initiative.",
                 solution: "Assembled a volunteer packing event of 50 peers from my track team to assemble thousands of nutritious meals for international distribution.",
                 result: "Helped pack over 4,000 meals in one afternoon, contributing to sustainable aid efforts and strengthening community bonds.",
-                link: "https://github.com/riley/charity-site"
+                link: "https://www.fmsc.org/"
             },
             {
                 title: "Long Jump State Qualifier",
@@ -302,15 +302,15 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
                 challenge: "After a season of inconsistent performance, I set a personal goal to qualify for regionals in long jump.",
                 solution: "Trained consistently with my coach, focused on technique refinement, and built mental resilience through visualization and journaling.",
                 result: "Qualified for regionals with a personal best, gaining confidence and proving that discipline and mindset shape outcomes.",
-                link: ""
+                link: "none"
             },
             {
-                title: "3D Planet Rendering",
-                category: "Code/Personal",
-                challenge: "A personal challenge to learn a new visualization library (three.js) over winter break.",
-                solution: "Created a simple animated model of a rotating planet using three.js, demonstrating coordinate system mastery.",
-                result: "Successfully rendered complex geometry and optimized the animation loop to maintain **60 FPS** on desktop browsers.",
-                link: "https://riley.github.io/planet-render"
+                title: "Personal Portfolio Website",
+                category: "Academic/Technical",
+                challenge: "Wanted to showcase my skills and experiences in a professional, accessible format but had no prior web development background.",
+                solution: "Learned HTML, CSS, and GitHub Pages hosting to design and deploy a personal portfolio site. Focused on clean layout, responsive design, and clear project documentation.",
+                result: "Successfully launched a live website that highlights my academic, service, and athletic projects, strengthening both my technical skills and professional presence.",
+                link: "https://github.com/riley/portfolio-site"
             }
         ];
 
@@ -576,6 +576,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
 
 
