--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
                 challenge: "Wanted to showcase my skills and experiences in a professional, accessible format but had no prior web development background.",
                 solution: "Learned HTML, CSS, and GitHub Pages hosting to design and deploy a personal portfolio site. Focused on clean layout, responsive design, and clear project documentation.",
                 result: "Successfully launched a live website that highlights my academic, service, and athletic projects, strengthening both my technical skills and professional presence.",
-                link: "https://github.com/riley/portfolio-site"
+                link: "https://nylahmadden-ship-it.github.io/my-website/"
             }
         ];
 
@@ -576,6 +576,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
 
 
