--- a/index.html
+++ b/index.html
@@ -317,12 +317,12 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
         // 1.4 EXPERIENCE & AWARDS (REQUIRED)
         const recognitionData = {
             experience: [
-                { title: "Team Lead, Ball State Hackathon", type: "Extracurricular", duration: "Oct 2025", detail: "Led a four-person team to develop a functional prototype in **24 hours**." },
-                { title: "Library Volunteer (IT Support)", type: "Community Service", duration: "Jan - May 2025", detail: "Provided **40+ hours** of technical support for public computers and staff devices." },
+                { title: "Library Volunteer", type: "Extracurricular", duration: "Every summer from 2021-2025", detail: "Helped navigate and design a program that promotes reading for the youth at their critical period." },
+                { title: "Community Service", type: "Service", duration: "2020-2025", detail: "I've completed 150+ hours of community service during my high school years at various organizations" },
             ],
             awards: [
-                { title: "Dean's List", duration: "Fall 2024", detail: "Achieved a **3.8 GPA**." },
-                { title: "Rising Star Freshman Award", duration: "Spring 2025", detail: "Recognized by the CS department for high academic achievement and engagement." },
+                { title: "Dean's List", duration: "Spring 2025", detail: "Achieved a **3.5 GPA**." },
+                { title: "Track Team MVP 2025", duration: "Spring 2025", detail: "Recognized by my teammates and coaches for my hard work and essential part in the team." },
             ]
         };
 
@@ -576,6 +576,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
 
 
